@@ -1,5 +1,5 @@
-Ganymede Release 1.0 prerelease beta 3
-October 5, 2000
+Ganymede Release 1.0 prerelease beta 4
+October 10, 2000
 README.xml
 ---------------------------------------------
 
