@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede Release 0.99.7 - Customization 13 October 1999</title>
+    <title>Ganymede Release 1.0p1b4 - Customization 10 October 2000</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede Release 0.99.7<br>Customization Overview 13 October 1999</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede Release 1.0p1b4<br>Customization Overview 10 October 2000</FONT></h1>
     <hr>
 
     <p>The Ganymede server has many advantages over the GASH project, including a graphical
