@@ -18,7 +18,6 @@
       <li><a href="#configure">configure</a></li>
       <li><a href="#installServer">installServer</a></li>
       <li><a href="#installClient">installClient</a></li>
-      <li><a href="#installClient2">installClient2</a></li>
       <li><a href="#installWeb">installWeb</a></li>
       <li><a href="#distribclean">distribclean</a></li>
       <li><a href="#runDirectLoader">runDirectLoader</a></li>
@@ -80,8 +79,7 @@
     binaries and the Swing GUI library.  <font
     color="#ff0000"><code><b>configure</b></code></font> then creates
     the <a href="#installServer">installServer</a>, <a
-    href="#installClient">installClient</a>, <a
-    href="#installClient2">installClient2</a>, and <a
+    href="#installClient">installClient</a>, and <a
     href="#installWeb">installWeb</a> scripts used to actually install
     the server and client software, and generates the makefiles and
     configure.sh files used to customize the src tree for building on
@@ -165,14 +163,6 @@
     distribution directory unless you will want to edit and rebuild the
     Ganymede sources at some later time.</p>
     
-    <table border="1" cellpadding="3" cellspacing="0" width="100%">
-      <tr BGCOLOR="#CCCCFF">
-	<td colspan="1" align="right"><h3><a name="installClient2"><b>installClient2</b></h3></td></tr></table> 
-    
-    <p><font color="#ff0000"><code><b>installClient2</b></code></font>
-    is the same as <a href="#installClient">installClient</A>, except designed to create a
-    client installation configured for use with Java 1.2 rather than Java 1.1.</p>
-
     <table border="1" cellpadding="3" cellspacing="0" width="100%">
       <tr BGCOLOR="#CCCCFF">
 	<td colspan="1" align="right"><h3><a name="installWeb"><b>installWeb</b></h3></td></tr></table> 
@@ -699,7 +689,7 @@
     <hr>
     <address><a href="mailto:broccol@csdsun1.arlut.utexas.edu">Jonathan Abbey</a></address>
     <!-- hhmts start -->
-Last modified: Fri Oct  6 18:48:21 CDT 2000
+Last modified: Mon Oct  9 23:54:04 CDT 2000
 <!-- hhmts end -->
   </body>
 </html>
