@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede Release 1.0pre1 beta 3 - Documentation 5 October 2000</title>
+    <title>Ganymede Release 1.0pre1 beta 4 - Documentation 10 October 2000</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
   <body BGCOLOR="#FFFFFF">
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede Release 1.0pre1 beta 3<br>Documentation 5 October 2000</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede Release 1.0pre1 beta 4<br>Documentation 10 October 2000</FONT></h1>
 
     <table border="1" cellpadding="3" cellspacing="0" width="100%">
       <tr BGCOLOR="#CCFFCC">
