@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>Ganymede UNIX Installation Guide Release 1.0 prerelease 1, beta 3 - 5 October 2000</title>
+    <title>Ganymede UNIX Installation Guide Release 1.0 prerelease 1, beta 4 - 10 October 2000</title>
   </head>
 
   <body BGCOLOR="#FFFFFF">
 
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede UNIX Installation Guide Release 1.0 prerelease 1, beta 3 - 5 October 2000</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede UNIX Installation Guide Release 1.0 prerelease 1, beta 4 - 10 October 2000</FONT></h1>
 <hr>
 
 <p>Installing Ganymede breaks down into five steps:</p>
@@ -34,7 +34,6 @@
     does two main things.  First, it unpacks four scripts you can
     immediately use to install the client and server, called
     <a href="glossary.html#installClient">installClient</a>,
-    <a href="glossary.html#installClient2">installClient2</a> (for JDK 1.2 and 1.3), 
     <a href="glossary.html#installWeb">installWeb</a> and 
     <a href="glossary.html#installServer">installServer</a>.
     Second, <a href="glossary.html#configure">configure</a> goes
@@ -251,12 +250,9 @@
     clients are themselves totally portable, however, as they are simply
     Java jar files.</p>
     
-    <p>We have provided two install scripts for installing the Ganymede
+    <p>We have provided an install script for installing the Ganymede
     clients on a UNIX system.  <a
-    href="glossary.html#installClient">installClient</a> is for Java
-    1.1 and Swing 1.1 or greater (Swing 1.1.1 heavily recommended),
-    and <a href="glossary.html#installClient2">installClient2</a>
-    is for Java 1.2.  Either script which will prompt you for the name
+    href="glossary.html#installClient">installClient</a> will prompt you for the name
     of the machine that will be running your Ganymede server, and the
     directory which will contain the bin, html, and jars
     directories. The install script will then customize and install
@@ -557,7 +553,7 @@
     <address><a href="mailto:broccol@csdsun1.arlut.utexas.edu">Jonathan Abbey</a></address>
     <!-- Created: Thu May 27 16:58:48 CDT 1999 -->
     <!-- hhmts start -->
-Last modified: Thu Oct  5 18:04:58 CDT 2000
+Last modified: Mon Oct  9 23:54:54 CDT 2000
 <!-- hhmts end -->
   </body>
 </html>
