@@ -3,12 +3,12 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta name="GENERATOR" content="Mozilla/4.5 [en] (WinNT; I) [Netscape]">
-   <title>Ganymede Release 1.0 prerelease 1 - Server Overview 6 October 2000</title>
+   <title>Ganymede Release 1.0 prerelease 1 beta 4 - Server Overview 10 October 2000</title>
 </head>
 <body bgcolor="#FFFFFF">
 
 <IMG SRC="gifs/ganymede_title.gif" HEIGHT=200 WIDTH=560 alt = "Ganymede">
-<h1><FONT FACE="Arial, Helvetica">Ganymede Release 1.0 prerelease 1<br>Server Overview 6 October 2000</FONT></h1>
+<h1><FONT FACE="Arial, Helvetica">Ganymede Release 1.0 prerelease 1 beta 4<br>Server Overview 10 October 2000</FONT></h1>
 
 <hr>
 
